Primary Interface ready

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,14 @@
-:root {
+body {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+  background-color: #218F76;
+}
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -29,6 +39,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #218F76;
 }
 
 h1 {
@@ -67,3 +78,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+ */
