--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,55 @@
-#root {
+.main{
+  /* border: 2px solid greenyellow; */
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.read{
+  margin-top: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -40,3 +91,20 @@
 .read-the-docs {
   color: #888;
 }
+
+.person{
+  background-color: darkcyan;
+  border: 3px solid goldenrod;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 20px;
+}
+
+
+.product{
+  background-color: lightcoral;
+  padding: 15px;
+  border: 3px solid maroon;
+  margin: 15px;
+  border-radius: 10px;
+} */
