--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   /* border: 2px solid greenyellow; */
   height: auto;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
 }
