--- a/src/components/Read/Read.css
+++ b/src/components/Read/Read.css
@@ -1,11 +1,3 @@
-.btn-edit{
-    color: orange;
-}
-
-.btn-block{
-    background-color: green;
-}
-
-.btn-delete{
-    background-color: red;
+.read{
+    margin: 0 2vw;
 }
