--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  place-items: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
   background-color: #218F76;
